@@ -20,6 +20,12 @@
 
 //  riemann_zeta
 
+// This can take long on simulators, timing out the test.
+// { dg-options "-DMAX_ITERATIONS=5" { target simulator } }
+
+#ifndef MAX_ITERATIONS
+#define MAX_ITERATIONS (sizeof(data001) / sizeof(testcase_riemann_zeta<double>))
+#endif
 
 //  Compare against values generated by the GNU Scientific Library.
 //  The GSL can be found on the web: http://www.gnu.org/software/gsl/
@@ -106,8 +112,7 @@ void test001()
   const Tp eps = std::numeric_limits<Tp>::epsilon();
   Tp max_abs_diff = -Tp(1);
   Tp max_abs_frac = -Tp(1);
-  unsigned int num_datum = sizeof(data001)
-                         / sizeof(testcase_riemann_zeta<double>);
+  unsigned int num_datum = MAX_ITERATIONS;
   for (unsigned int i = 0; i < num_datum; ++i)
     {
       const Tp f = std::tr1::riemann_zeta(Tp(data001[i].x));
